--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css"
 </head>
 <body>
-    <h1>Luke</h1>
-    <a href = "/contact.html"></a>
-    <p>Hello my name is Luke</p>
-    <p>Hello my name is Luke</p>
-    <p>Hello my name is Luke</p>
+    <h1>Contact Page</h1>
 </body>
 </html>
