--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Luke</h1>
-    <a href = "/contact.html"></a>
+    <a href = "/contact.html">Contact</a>
     <p>Hello my name is Luke</p>
     <p>Hello my name is Luke</p>
     <p>Hello my name is Luke</p>
