--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <h1>Luke</h1>
     <a href = "/Resume/contact.html">Contact</a>
+    <span class="logo">
+        <img src="https://imgur.com/a/hj1aRWu" alt> == $0
+    </span>
     <p>Hello my name is Luke</p>
     <p>Hello my name is Luke</p>
     <p>Hello my name is Luke</p>
