--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Luke</h1>
     <a href = "/Resume/contact.html">Contact</a>
     <span class="logo">
-        <img src="https://imgur.com/a/hj1aRWu" alt> == $0
+        <img src="img/redStar.png" alt="">
     </span>
     <p>Hello my name is Luke</p>
     <p>Hello my name is Luke</p>
