--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Luke</h1>
     <a href = "/Resume/contact.html">Contact</a>
     <span class="logo">
-        <img src="img/redStar.png" alt="">
+        <img class="logoImg" src="img/redStar.png" alt="GuodongLu_logo">
     </span>
     <p>Hello my name is Luke</p>
     <p>Hello my name is Luke</p>
