--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <html lang="en">
-<head>
+<head class="header">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GuodongLu_Resume</title>
     <link rel="stylesheet" href="styles.css"
+    <span class="logo">
+        <img class="logoImg" src="img/redStar.png" alt="GuodongLu_logo">
+    </span>
 </head>
 <body>
     <h1>Luke</h1>
     <a href = "/Resume/contact.html">Contact</a>
-    <span class="logo">
-        <img class="logoImg" src="img/redStar.png" alt="GuodongLu_logo">
-    </span>
+    
     <p>Hello my name is Luke</p>
     <p>Hello my name is Luke</p>
     <p>Hello my name is Luke</p>
