--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>GuodongLu_Resume</title>
     <link rel="stylesheet" href="styles.css"
     <span class="logo">
-        <img class="logoImg" src="img/redStar.png" alt="GuodongLu_logo">
+        <img class="logoImg" src="img/HeadImg.jpeg" alt>
     </span>
 </head>
 <body>
