--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <span class="logo">
         <img class="logoImg" src="img/HeadImg.jpeg" alt>
     </span>
+    <h1>Guodong Lu</h1>
 </head>
 <body>
     <h1>Luke</h1>
