--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         <img class="logoImg" src="img/HeadImg.jpeg" alt>
     </span>
     <h1>Guodong Lu</h1>
+    <p>
+        "🏎🚕🚛🚙"
+        <br>
+        "Developer | Gamer | Foodie"
+    </p>
 </head>
 <body>
     <h1>Luke</h1>
