--- a/index.html
+++ b/index.html
@@ -15,6 +15,25 @@
         "Developer | Gamer | Foodie"
     </p>
 </head>
+
+<nav id="nav">
+    <ul>
+        <li>
+            <a href="#intro" class="artive">About Me</a>
+        </li>
+        <li>
+            <a href="#projects">Analytics Projects</a>
+        </li>
+        <li>
+            <a href="#skillsets">Skillsets</a>
+        </li>
+        <li>
+            <a href="#funfacts">Fun Facts</a>
+        </li>
+    </ul>
+</nav>
+
+
 <body>
     <h1>Luke</h1>
     <a href = "/Resume/contact.html">Contact</a>
