--- a/index.html
+++ b/index.html
@@ -8,38 +8,35 @@
     <span class="logo">
         <img class="logoImg" src="img/HeadImg.jpeg" alt>
     </span>
-    <h1>Guodong Lu</h1>
-    <p>
-        "🏎🚕🚛🚙"
-        <br>
-        "Developer | Gamer | Foodie"
-    </p>
 </head>
 
-<nav id="nav">
-    <ul>
-        <li>
-            <a href="#intro" class="artive">About Me</a>
-        </li>
-        <li>
-            <a href="#projects">Analytics Projects</a>
-        </li>
-        <li>
-            <a href="#skillsets">Skillsets</a>
-        </li>
-        <li>
-            <a href="#funfacts">Fun Facts</a>
-        </li>
-    </ul>
-</nav>
 
 
-<body>
-    <h1>Luke</h1>
-    <a href = "/Resume/contact.html">Contact</a>
-    
-    <p>Hello my name is Luke</p>
-    <p>Hello my name is Luke</p>
-    <p>Hello my name is Luke</p>
+
+<body class>
+    <div id="wrapper">
+        <h1>Guodong Lu</h1>
+        <p>
+            "🏎🚕🚛🚙"
+            <br>
+            "Developer | Gamer | Foodie"
+        </p>
+        <nav id="nav">
+            <ul>
+                <li>
+                    <a href="#intro" class="artive">About Me</a>
+                </li>
+                <li>
+                    <a href="#projects">Analytics Projects</a>
+                </li>
+                <li>
+                    <a href="#skillsets">Skillsets</a>
+                </li>
+                <li>
+                    <a href="#funfacts">Fun Facts</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
