--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body class>
     <div id="wrapper">
-        <h1>Guodong Lu</h1>
+        <h1 class="name">Guodong Lu</h1>
         <p>
             "🏎🚕🚛🚙"
             <br>
@@ -38,5 +38,19 @@
             </ul>
         </nav>
     </div>
+
+    <main>
+        <section class="left"></section>
+            <h1>Introduction</h1>
+            <p>
+                I always thought my dream was to work in the computer field. Ever since I was a kid, computer operating systems or software development has been my passion. I still remember sitting in front of a Windows computer and spending a day figuring out how to use the system. When I was in college, I learned JavaScript, python, C++, Linux, and HTML because I could learn more in computer fields. I was insatiable.
+So, now, I graduated, this passion remains with me. There's undoubtedly yet more to learn, yet more problems to solve, and eventually more to build in my future. And for this, I am very appreciative.
+            </p>
+            <br>
+            <h1>Education</h1>
+            <p>
+                California State University, East Bay
+            </p>
+    </main>
 </body>
 </html>
