--- a/index.html
+++ b/index.html
@@ -50,7 +50,23 @@ So, now, I graduated, this passion remains with me. There's undoubtedly yet more
             <h1>Education</h1>
             <p>
                 California State University, East Bay
+                <br>
+                09/2019 - 06/2021
+                <br>
+                Major: Bachelor of Computer Science
+                <br>
+                GPA: 3.4
             </p>
+            <p>
+                Chabot College
+                <br>
+                09/2017 - 06/2019
+                <br>
+                Major: Associate of Computer Science
+                <br>
+                GPA: 3.3
+            </p>
+
     </main>
 </body>
 </html>
