--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <main>
         <section class="left"></section>
-            <h1>Introduction</h1>
+            <h1>About me</h1>
             <p>
                 I always thought my dream was to work in the computer field. Ever since I was a kid, computer operating systems or software development has been my passion. I still remember sitting in front of a Windows computer and spending a day figuring out how to use the system. When I was in college, I learned JavaScript, python, C++, Linux, and HTML because I could learn more in computer fields. I was insatiable.
 So, now, I graduated, this passion remains with me. There's undoubtedly yet more to learn, yet more problems to solve, and eventually more to build in my future. And for this, I am very appreciative.
@@ -67,6 +67,17 @@ So, now, I graduated, this passion remains with me. There's undoubtedly yet more
                 GPA: 3.3
             </p>
 
+            <h1>Analytics Projects</h1>
+            <p>
+                Note | by using React JavaScript HTML CSS
+                <br>
+                <ul>
+                    <li>Developed a react application that can store, manage, and facilitate access to users’ events</li>
+                    <li>Used JavaScript to program the application such as if statement, function, and class</li>
+                    <li>Used HTML to structure the application page</li>
+                    <li>Used CSS(Cascading Style Sheets) to style and layout the application pages</li>
+                </ul>
+            </p>
     </main>
 </body>
 </html>
