--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css"
     <span class="logo">
         <img class="logoImg" src="img/HeadImg.jpeg" alt>
+        <img class="logoImg" src="img/HeadImg.jpeg" alt>
+        <img class="logoImg" src="img/HeadImg.jpeg" alt>
     </span>
 </head>
 
