--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css"
     <span class="logo">
         <img class="logoImg" src="img/HeadImg.jpeg" alt>
-        <img class="logoImg" src="img/Head1.jpg" alt>
-        <img class="logoImg" src="img/Head2.jpg" alt>
+        <img class="logoImg" src="img/head3.png" alt>
+        <img class="logoImg" src="img/head4.jpeg" alt>
     </span>
 </head>
 
