--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 <body class>
-    <div id="wrapper">
+    <div class="wrapper">
         <h1 class="name">Guodong Lu</h1>
         <p>
             "🏎🚕🚛🚙"
