--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 <body class>
     <div class="wrapper">
         <h1 class="name">Guodong Lu</h1>
-        <p>
-            "🏎🚕🚛🚙"
+        <p class="name">
+            "  🏎🚕🚛🚙  "
             <br>
-            "Developer | Gamer | Foodie"
+            "  Developer | Gamer | Foodie  "
         </p>
-        <nav id="nav">
+        <nav class="name">
             <ul>
                 <li>
                     <a href="#intro" class="artive">About Me</a>
