--- a/index.html
+++ b/index.html
@@ -1,85 +1,87 @@
-<html lang="en">
-<head class="header">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GuodongLu_Resume</title>
-    <link rel="stylesheet" href="styles.css"
-    <span class="logo">
-        <img class="logoImg" src="img/HeadImg.jpeg" alt>
-        <img class="logoImg" src="img/head1.jpeg" alt>
-        <img class="logoImg" src="img/head2.jpeg" alt>
-    </span>
-</head>
-
-
-
-
-<body class>
-    <div class="wrapper">
-        <h1 class="name">Guodong Lu</h1>
-        <p class="name">
-            "  🏎🚕🚛🚙  "
-            <br>
-            "  Developer | Gamer | Foodie  "
-        </p>
-        <nav class="name">
-            <ul>
-                <li>
-                    <a href="#intro" class="artive">About Me</a>
-                </li>
-                <li>
-                    <a href="#projects">Analytics Projects</a>
-                </li>
-                <li>
-                    <a href="#skillsets">Skillsets</a>
-                </li>
-                <li>
-                    <a href="#funfacts">Fun Facts</a>
-                </li>
-            </ul>
-        </nav>
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Unity WebGL Player | coin flip 2.0</title>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/style.css">
+  </head>
+  <body>
+    <div id="unity-container" class="unity-desktop">
+      <canvas id="unity-canvas" width=960 height=600></canvas>
+      <div id="unity-loading-bar">
+        <div id="unity-logo"></div>
+        <div id="unity-progress-bar-empty">
+          <div id="unity-progress-bar-full"></div>
+        </div>
+      </div>
+      <div id="unity-mobile-warning">
+        WebGL builds are not supported on mobile devices.
+      </div>
+      <div id="unity-footer">
+        <div id="unity-webgl-logo"></div>
+        <div id="unity-fullscreen-button"></div>
+        <div id="unity-build-title">coin flip 2.0</div>
+      </div>
     </div>
+    <script>
+      var buildUrl = "Build";
+      var loaderUrl = buildUrl + "/HTML_ver.loader.js";
+      var config = {
+        dataUrl: buildUrl + "/HTML_ver.data.gz",
+        frameworkUrl: buildUrl + "/HTML_ver.framework.js.gz",
+        codeUrl: buildUrl + "/HTML_ver.wasm.gz",
+        streamingAssetsUrl: "StreamingAssets",
+        companyName: "DefaultCompany",
+        productName: "coin flip 2.0",
+        productVersion: "0.1",
+      };
 
-    <main>
-        <section class="left"></section>
-            <h1>About me</h1>
-            <p>
-                I always thought my dream was to work in the computer field. Ever since I was a kid, computer operating systems or software development has been my passion. I still remember sitting in front of a Windows computer and spending a day figuring out how to use the system. When I was in college, I learned JavaScript, python, C++, Linux, and HTML because I could learn more in computer fields. I was insatiable.
-So, now, I graduated, this passion remains with me. There's undoubtedly yet more to learn, yet more problems to solve, and eventually more to build in my future. And for this, I am very appreciative.
-            </p>
-            <br>
-            <h1>Education</h1>
-            <p>
-                California State University, East Bay
-                <br>
-                09/2019 - 06/2021
-                <br>
-                Major: Bachelor of Computer Science
-                <br>
-                GPA: 3.4
-            </p>
-            <p>
-                Chabot College
-                <br>
-                09/2017 - 06/2019
-                <br>
-                Major: Associate of Computer Science
-                <br>
-                GPA: 3.3
-            </p>
+      var container = document.querySelector("#unity-container");
+      var canvas = document.querySelector("#unity-canvas");
+      var loadingBar = document.querySelector("#unity-loading-bar");
+      var progressBarFull = document.querySelector("#unity-progress-bar-full");
+      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+      var mobileWarning = document.querySelector("#unity-mobile-warning");
 
-            <h1>Analytics Projects</h1>
-            <p>
-                Note | by using React JavaScript HTML CSS
-                <br>
-                <ul>
-                    <li>Developed a react application that can store, manage, and facilitate access to users’ events</li>
-                    <li>Used JavaScript to program the application such as if statement, function, and class</li>
-                    <li>Used HTML to structure the application page</li>
-                    <li>Used CSS(Cascading Style Sheets) to style and layout the application pages</li>
-                </ul>
-            </p>
-    </main>
-</body>
+      // By default Unity keeps WebGL canvas render target size matched with
+      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
+      // Set this to false if you want to decouple this synchronization from
+      // happening inside the engine, and you would instead like to size up
+      // the canvas DOM size and WebGL render target sizes yourself.
+      // config.matchWebGLToCanvasSize = false;
+
+      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+        container.className = "unity-mobile";
+        // Avoid draining fillrate performance on mobile devices,
+        // and default/override low DPI mode on mobile browsers.
+        config.devicePixelRatio = 1;
+        mobileWarning.style.display = "block";
+        setTimeout(() => {
+          mobileWarning.style.display = "none";
+        }, 5000);
+      } else {
+        canvas.style.width = "960px";
+        canvas.style.height = "600px";
+      }
+      loadingBar.style.display = "block";
+
+      var script = document.createElement("script");
+      script.src = loaderUrl;
+      script.onload = () => {
+        createUnityInstance(canvas, config, (progress) => {
+          progressBarFull.style.width = 100 * progress + "%";
+        }).then((unityInstance) => {
+          loadingBar.style.display = "none";
+          fullscreenButton.onclick = () => {
+            unityInstance.SetFullscreen(1);
+          };
+        }).catch((message) => {
+          alert(message);
+        });
+      };
+      document.body.appendChild(script);
+    </script>
+  </body>
 </html>
